--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!-- =============navbar================== -->
         <nav class="pt-4 container">
             <div class="d-flex align-items-center justify-content-between">
-                <a href="#" class="d-flex gap-2"><img src="./assets/images/svg/WebLogo.svg" alt="logo"
+                <a href="#" class="d-flex gap-2 align-items-end"><img src="./assets/images/svg/WebLogo.svg" alt="logo"
                         class="w-100 logo_max_w"><span
                         class="ff_roboto fw-bold fs_3lg text-white d-flex align-items-end d-none d-sm-block">FURNITURE</span></a>
                 <ul id="navbar"
