--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
                 <ul id="navbar"
                     class="pt-3 ps-0 m-0 d-flex flex-column list-unstyled flex-lg-row gap_55 justify-content-center align-items-center mobile_view">
                     <li><a onclick="opennav()" href="#home"
-                            class="under_line position-relative ff_roboto fs_8sm fw-normal text-white text-capitalize mb-0 text-nowrap font_size_24">HOME</a>
+                            class="under_line position-relative ff_roboto fs_8sm fw-normal text-white text-capitalize mb-0 text-nowrap font_size_24 nav duration">HOME</a>
                     </li>
                     <li><a onclick="opennav()" href="#about"
-                            class="under_line position-relative ff_roboto fs_8sm fw-normal text-white text-capitalize mb-0 text-nowrap font_size_24">ABOUT
+                            class="under_line position-relative ff_roboto fs_8sm fw-normal text-white text-capitalize mb-0 text-nowrap font_size_24 nav duration">ABOUT
                             US</a></li>
                     <li><a onclick="opennav()" href="#shop"
-                            class="under_line position-relative ff_roboto fs_8sm fw-normal text-white text-capitalize mb-0 text-nowrap font_size_24">SHOP</a>
+                            class="under_line position-relative ff_roboto fs_8sm fw-normal text-white text-capitalize mb-0 text-nowrap font_size_24 nav duration">SHOP</a>
                     </li>
                     <li><a onclick="opennav()" href="#contact"
-                            class="under_line position-relative ff_roboto fs_8sm fw-normal text-white text-capitalize mb-0 text-nowrap font_size_24 ">CONTACT
+                            class="under_line position-relative ff_roboto fs_8sm fw-normal text-white text-capitalize mb-0 text-nowrap font_size_24 nav duration">CONTACT
                             US</a></li>
                 </ul>
                 <div id="menubtn-icon" onclick="opennav()" class="d-lg-none z_index_11 pe-2 cursor_pointer ">
@@ -647,7 +647,7 @@
                     <div class="row justify-content-between align-items-center">
                         <div class="col-sm-3 col-6">
                             <ul class="d-flex flex-column gap-2 mb-0 ps-0">
-                                <li class="ff_roboto fw-semibold fs_4sm text-white footer_heading lh_150 mb-2">ABOUT
+                                <li class="ff_roboto fw-semibold fs_4sm text-white lh_150 mb-2">ABOUT
                                     STORE
                                 </li>
                                 <li><a href="#home"
@@ -660,7 +660,7 @@
                                         class="ff_roboto fw-normal fs_4sm text-white lh_150 mb-1 footer_link position-relative">Product</a>
                                 </li>
                                 <li><a href="#festival"
-                                        class="ff_roboto fw-normal fs_4sm text-white lh_150 mb-1 footer_link position-relative">Festival
+                                        class="ff_roboto fw-normal fs_4sm text-white lh_150 mb-1 footer_link position-relative nav duration">Festival
                                         Offer</a>
                                 </li>
                                 <li><a href="#"
@@ -671,7 +671,7 @@
                         </div>
                         <div class="col-sm-3 col-6">
                             <ul class="d-flex flex-column gap-2 mb-0 ps-0">
-                                <li class="ff_roboto fw-semibold fs_4sm text-white footer_heading lh_150 mb-2">
+                                <li class="ff_roboto fw-semibold fs_4sm text-white lh_150 mb-2">
                                     BRANDS
                                 </li>
                                 <li><a href="#product"
@@ -695,7 +695,7 @@
                         </div>
                         <div class="col-sm-3 col-6 mt-sm-0 mt-4">
                             <ul class="d-flex flex-column gap-2 mb-0 ps-0">
-                                <li class="ff_roboto fw-semibold fs_4sm text-white footer_heading lh_150 mb-2">
+                                <li class="ff_roboto fw-semibold fs_4sm text-white lh_150 mb-2">
                                     CATEGORIES
                                 </li>
                                 <li><a href="#single"
