--- a/index.html
+++ b/index.html
@@ -428,35 +428,35 @@
                 <div class="testimonaial d-flex align-items-center">
                     <div class="mx-lg-5 mx-4 d-flex justify-content-center">
                         <img src="./assets/images/png/customerslide1.png" alt="customerslide"
-                            class="w-100 testimg1 position-relative z-1">
+                            class="w-100 testimg1 position-relative z-1 cursor_pointer">
                     </div>
                     <div class="mx-lg-5 mx-4 d-flex justify-content-center">
                         <img src="./assets/images/png/customerslide2.png" alt="customerslide"
-                            class="w-100 testimg2 position-relative z-1">
+                            class="w-100 testimg2 position-relative z-1 cursor_pointer">
                     </div>
                     <div class="mx-lg-5 mx-4 d-flex justify-content-center">
                         <img src="./assets/images/png/customerslide3.png" alt="customerslide"
-                            class="w-100 testimg3 position-relative z-1">
+                            class="w-100 testimg3 position-relative z-1 cursor_pointer">
                     </div>
                     <div class="mx-lg-5 mx-4 d-flex justify-content-center">
                         <img src="./assets/images/png/customerslide4.png" alt="customerslide"
-                            class="w-100 testimg4 position-relative z-1">
+                            class="w-100 testimg4 position-relative z-1 cursor_pointer">
                     </div>
                     <div class="mx-lg-5 mx-4 d-flex justify-content-center">
                         <img src="./assets/images/png/customerslide5.png" alt="customerslide"
-                            class="w-100 testimg5 position-relative z-1">
+                            class="w-100 testimg5 position-relative z-1 cursor_pointer">
                     </div>
                     <div class="mx-lg-5 mx-4 d-flex justify-content-center">
                         <img src="./assets/images/png/customerslide6.png" alt="customerslide"
-                            class="w-100 testimg6 position-relative z-1">
+                            class="w-100 testimg6 position-relative z-1 cursor_pointer">
                     </div>
                     <div class="mx-lg-5 mx-4 d-flex justify-content-center">
                         <img src="./assets/images/png/customerslide7.png" alt="customerslide"
-                            class="w-100 testimg7 position-relative z-1">
+                            class="w-100 testimg7 position-relative z-1 cursor_pointer">
                     </div>
                     <div class="mx-lg-5 mx-4 d-flex justify-content-center">
                         <img src="./assets/images/png/customerslide4.png" alt="customerslide"
-                            class="w-100 testimg3 position-relative z-1">
+                            class="w-100 testimg3 position-relative z-1 cursor_pointer">
                     </div>
                 </div>
                 <div class="slider-for">
