--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
                                         class="ff_roboto fw-normal fs_4sm text-white lh_150 mb-1 footer_link position-relative">Product</a>
                                 </li>
                                 <li><a href="#festival"
-                                        class="ff_roboto fw-normal fs_4sm text-white lh_150 mb-1 footer_link position-relative nav duration">Festival
+                                        class="ff_roboto fw-normal fs_4sm text-white lh_150 mb-1 footer_link position-relative">Festival
                                         Offer</a>
                                 </li>
                                 <li><a href="#"
