--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
             </div>
         </div>
         <div class="footer_bottom_line w-full"></div>
-        <p class="text-white ff_roboto fw-normal fs_4sm text-center py-sm-4 py-3 my-xl-1 mb-0">@copyright<span
+        <p class="text-white ff_roboto fw-normal fs_4sm text-center py-sm-4 py-3 mb-0">@copyright<span
                 id="year_change"></p>
     </footer>
     <!-- ----------------------------------------aos-link----------------------------------------- -->
